Jumping menu issue resolved - tested on a local installation of IE8, no less.
Fixes #343

--- a/style.css
+++ b/style.css
@@ -1879,8 +1879,8 @@ ul#sitemap-posts ul {
 	min-height: 50px;
 }
 
-#ie8 .nav-collapse {
-	float: left;
+#ie8 .menu-navigation {
+	min-height: 40px;
 }
 
 /* ------------------------------------------------------------------------ 13. inline-grid */
